kube_deploy/Uat/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dcs-service-uat
  labels:
    app: dcs-app-uat
spec:
  ports:
    - port: 80
      name: http
      targetPort: 3100
  selector:
    app: dcs-app-uat
