kube_deploy/Uat/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 37.143.143.174/32,37.143.143.162/32,37.143.143.10/32
    external-dns.alpha.kubernetes.io/set-identifier: dcs-ingress-uat-claim-criminal-injuries-compensation-uat-green
    external-dns.alpha.kubernetes.io/aws-weight: '0'
  name: dcs-ingress-uat
  namespace: claim-criminal-injuries-compensation-uat
spec:
  tls:
    - hosts:
        - data-capture-service.uat.claim-criminal-injuries-compensation.apps.live.cloud-platform.service.justice.gov.uk
    - hosts:
        - data-capture-service.uat.claim-criminal-injuries-compensation.service.justice.gov.uk
      secretName: data-capture-service-cert-secret-uat
  rules:
    - host: data-capture-service.uat.claim-criminal-injuries-compensation.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: dcs-service-uat
              servicePort: 80
    - host: data-capture-service.uat.claim-criminal-injuries-compensation.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: dcs-service-uat
              servicePort: 80
